Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2653

Signal RunConfiguration::isEnabledChanged() is not necessarily connected for the active run configuration.

    XMLWordPrintable

Details

    Description

      The following line is in ProjectExplorerPlugin::startupProjectChanged():
      connect(project->activeTarget()->activeRunConfiguration(), SIGNAL(isEnabledChanged(bool)),
      this, SLOT(updateRunActions()));
      But the signal is not connected when the active run configuration changes for other reasons (e.g. active target changed), so the project explorer will miss updates from the new active run configuration in those cases. In the worst case, the "run" action will stay disabled for a run configuration that was initially not runnable, but has called isEnabledChanged(true) in the mean time.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes