ProjectExplorer: Fix connnect/disconnect RunConfiguration::isEnabled()

Reviewed-By: ck

Task-Nr: QTCREATORBUG-2653